--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
         <section class="hidden lg:flex ">
             <div class=" w-full h-auto">
                 <div id="" class=" relative h-auto w-full">
-                    <img src="/images/banner1.png" class="  brightness-50" />
+                    <img src="images/banner1.png" class="  brightness-50" />
                     <div
                         class="absolute flex justify-center transform -translate-y-1/2 left-5 right-5 top-1/2 text-center">
                         <div class="">
@@ -471,7 +471,7 @@
                                 <!-- first card  -->
                                 <div class="card bg-transparent">
                                     <figure class="px-10 pt-10">
-                                        <img src="/images/member1.png" alt="Shoes" class="rounded-full" />
+                                        <img src="images/member1.png" alt="Shoes" class="rounded-full" />
                                     </figure>
                                     <div class="card-body items-center text-center text-white">
                                         <h2 class="card-title">Awlad Hossain</h2>
@@ -482,7 +482,7 @@
                                 <!-- second card  -->
                                 <div class="card bg-transparent">
                                     <figure class="px-10 pt-10">
-                                        <img src="/images/member2.png" alt="Shoes" class="rounded-full" />
+                                        <img src="images/member2.png" alt="Shoes" class="rounded-full" />
                                     </figure>
                                     <div class="card-body items-center text-center text-white">
                                         <h2 class="card-title">Safia Chowdhury</h2>
@@ -493,7 +493,7 @@
                                 <!-- 3 card  -->
                                 <div class="card bg-transparent">
                                     <figure class="px-10 pt-10">
-                                        <img src="/images/member3.png" alt="Shoes" class="rounded-full" />
+                                        <img src="images/member3.png" alt="Shoes" class="rounded-full" />
                                     </figure>
                                     <div class="card-body items-center text-center text-white">
                                         <h2 class="card-title">Rokib Hossain</h2>
@@ -504,7 +504,7 @@
                                 <!-- 4 card  -->
                                 <div class="card bg-transparent">
                                     <figure class="px-10 pt-10">
-                                        <img src="/images/member4.png" alt="Shoes" class="rounded-full" />
+                                        <img src="images/member4.png" alt="Shoes" class="rounded-full" />
                                     </figure>
                                     <div class="card-body items-center text-center text-white">
                                         <h2 class="card-title">Chaity</h2>
@@ -541,7 +541,7 @@
                             <!-- 1st card  -->
                             <div class="card  bg-transparent ">
                                 <figure class="px-10 pt-10">
-                                    <img src="/images/member1.png" alt="Shoes" class="rounded-xl" />
+                                    <img src="images/member1.png" alt="Shoes" class="rounded-xl" />
                                 </figure>
                                 <div class="card-body items-center text-center text-white">
                                     <h2 class="card-title">Awlad Hossain</h2>
@@ -552,7 +552,7 @@
                             <!-- 2st card  -->
                             <div class="card  bg-transparent shadow-xl">
                                 <figure class="px-10 pt-10">
-                                    <img src="/images/member2.png" alt="Shoes" class="rounded-xl" />
+                                    <img src="images/member2.png" alt="Shoes" class="rounded-xl" />
                                 </figure>
                                 <div class="card-body items-center text-center text-white">
                                     <h2 class="card-title">Safia Chowdhury</h2>
@@ -563,7 +563,7 @@
                             <!-- 3st card  -->
                             <div class="card  bg-transparent shadow-xl">
                                 <figure class="px-10 pt-10">
-                                    <img src="/images/member3.png" alt="Shoes" class="rounded-xl" />
+                                    <img src="images/member3.png" alt="Shoes" class="rounded-xl" />
                                 </figure>
                                 <div class="card-body items-center text-center text-white">
                                     <h2 class="card-title">Rokib Hossain</h2>
@@ -574,7 +574,7 @@
                             <!-- 4th card  -->
                             <div class="card  bg-transparent shadow-xl">
                                 <figure class="px-10 pt-10">
-                                    <img src="/images/member4.png" alt="Shoes" class="rounded-xl" />
+                                    <img src="images/member4.png" alt="Shoes" class="rounded-xl" />
                                 </figure>
                                 <div class="card-body items-center text-center text-white">
                                     <h2 class="card-title">Chaity</h2>
