--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             </div>
         </nav>
 
+
         <!-- banner section styles  -->
         <section class="">
             <div class="carousel w-full">
@@ -207,7 +208,8 @@
             </div>
 
         </section>
-
+    </header>
+    <main>
         <!-- dealing section  -->
         <section class="my-5 md:my-32 lg:my-44 px-3 lg:px-0">
             <!-- header div  -->
@@ -706,41 +708,41 @@
             </div>
         </section>
         <!-- footer section style  -->
-        <footer class="footer footer-center py-6 lg:p-36 bg-black text-white ">
-            <div>
-                <div class="flex gap-5">
-                    <img src="images/logo.png" alt="">
-                    <h3 class="text-5xl font-bold">Fruit Burst</h3>
-                </div>
+
+
+    </main>
+    <footer class="footer footer-center py-6 lg:p-36 bg-black text-white ">
+        <div>
+            <div class="flex gap-5">
+                <img src="images/logo.png" alt="">
+                <h3 class="text-5xl font-bold">Fruit Burst</h3>
             </div>
-            <div>
+        </div>
+        <div>
 
 
 
-                <ul class="grid grid-cols-2 md:grid-cols-3 lg:flex list-none gap-5 md:gap-12 lg:gap-16>
+            <ul class="grid grid-cols-2 md:grid-cols-3 lg:flex list-none gap-5 md:gap-12 lg:gap-16">
                 <li><a href="">Home</a></li>
                 <li><a href="">About Us</a></li>
                 <li><a href="">Shop</a></li>
                 <li><a href="">All Fruits</a></li>
                 <li><a href="">Support</a></li>
                 <li><a href="">My Account</a></li>
-              </ul> 
-              
-            </div> 
-            <div>
-              <div class=" grid grid-flow-col gap-4">
-                    <a href="" class=""><i class="fa-brands fa-twitter  "></i></a>
-                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                    <a href=""><i class="fa-brands fa-youtube"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-apple"></i></a>
+            </ul>
+
+        </div>
+        <div>
+            <div class=" grid grid-flow-col gap-4">
+                <a href="" class=""><i class="fa-brands fa-twitter  "></i></a>
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-youtube"></i></a>
+                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-apple"></i></a>
             </div>
-            </div>
-        </footer>
-    </header>
-    <main></main>
-    <footer></footer>
+        </div>
+    </footer>
 
 
 </body>
